# avrogator

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
avrogator/: __init__.py  cli.py  emitter.py
requirements/: dev.txt  main.txt
tests/: avro_test.py  conftest.py
tests/testdata/: message.json  output-singleobj.avro
